@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
+  Added intersects() and encapsulates() functions to the Atom class for
+  comparing relationships between similar atoms.
+
   03 May 2005; Jason Stubbs <jstubbs@gentoo.org> man/portage.5:
   Removed invalid example from package.keywords section.
 
